--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -4,8 +4,8 @@
   font-family: sans-serif;
 }
 .heading {
-  /* color: #B94479; */
-  color: rebeccapurple;
+  color: #EC1D97
+  /* color: rebeccapurple; */
   /* background-image: linear-gradient(90deg,var(--theme-ui-colors-purple-60,#663399),var(--theme-ui-colors-magenta-50,#bc027f),var(--theme-ui-colors-orange-70,#f67300));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; */
