implemented data query: blogs

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -3,6 +3,12 @@
   max-width: 500px;
   font-family: sans-serif;
 }
+.site-title {
+  font-size: 3rem;
+  color: gray;
+  font-weight: 700;
+  margin: 3rem 0;
+}
 .heading {
   color: #EC1D97
   /* color: rebeccapurple; */
