--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -27,3 +27,14 @@
 .nav-link-text {
   color: black;
 }
+
+.btn{
+  background: linear-gradient(103deg, #EC1D97, #e00082);
+  background-color: rgb(224, 0, 130);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  border: solid 2px #e00083;
+  padding: 17px 30px 19px;
+  border-radius: 6px;
+  transition: background-position .25s ease, box-shadow .25s ease;
+}
