--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -10,11 +10,7 @@
   margin: 3rem 0;
 }
 .heading {
-  color: #EC1D97
-  /* color: rebeccapurple; */
-  /* background-image: linear-gradient(90deg,var(--theme-ui-colors-purple-60,#663399),var(--theme-ui-colors-magenta-50,#bc027f),var(--theme-ui-colors-orange-70,#f67300));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  /* color: #EC1D97 */
 }
 .nav-links {
   display: flex;
