--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -26,7 +26,7 @@ body{
 
 .site-title {
   font-size: 3rem;
-  color: #000;
+  color: grey;
   font-weight: 700;
   margin: 3rem 0;
 }
@@ -45,9 +45,10 @@ body{
 }
 
 .site-Logo{
-  width: 75px;
-  height: 75px;
-  margin: 7px;
+  width: 25px;
+  height: 25px;
+  margin: 5px;
+  opacity: 0.4;
 }
 
 .heading {
@@ -76,4 +77,10 @@ body{
   color: gray;
   text-align: center;
   z-index: 2;
+}
+
+.footer-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
